tests/ui/traits/new-solver/alias_eq_substs_eq_not_intercrate.stderr
error[E0119]: conflicting implementations of trait `Overlaps<Box<_>>` for type `<_ as TraitB>::Assoc`
  --> $DIR/alias_eq_substs_eq_not_intercrate.rs:14:1
   |
LL | impl<T: TraitB> Overlaps<Box<T>> for <T as TraitB>::Assoc {}
   | --------------------------------------------------------- first implementation here
LL | impl<U: TraitB> Overlaps<U> for <U as TraitB>::Assoc {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `<_ as TraitB>::Assoc`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0119`.
